# C-mini-HWs

./: README.md
Mini HWs/pb071-mini-01/: CMakeLists.txt
Mini HWs/pb071-mini-01/task01-hello_world/: solution.c  source.c
Mini HWs/pb071-mini-02/: CMakeLists.txt
Mini HWs/pb071-mini-02/task01-alphanumeric/: solution.c  source.c
Mini HWs/pb071-mini-02/task02-interval/: solution.c  source.c
Mini HWs/pb071-mini-02/task03-sizeof/: solution.c  source.c
Mini HWs/pb071-mini-02/task04-closest-leap-year/: solution.c  source.c
Mini HWs/pb071-mini-02/task05-vertices-distance/: solution.c  source.c
Mini HWs/pb071-mini-02/task06-pen-pineapple-apple-pen/: solution.c  source.c
Mini HWs/pb071-mini-02/task07-digit/: solution.c  source.c
Mini HWs/pb071-mini-02/task08-powers-of-two/: solution.c  source.c
Mini HWs/pb071-mini-02/task09-right-triangle/: solution.c  source.c
Mini HWs/pb071-mini-02/task10-work-or-weekend/: solution.c  source.c
Mini HWs/pb071-mini-03/: CMakeLists.txt
Mini HWs/pb071-mini-03/task01-array-basics/: solution.c  source.c
Mini HWs/pb071-mini-03/task02-very-simple-functions/: solution.c  source.c
Mini HWs/pb071-mini-03/task03-pointer-basics/: solution.c  source.c
Mini HWs/pb071-mini-03/task04-array-pointers/: solution.c  source.c
Mini HWs/pb071-mini-03/task05-function-madness/: solution.c  source.c
Mini HWs/pb071-mini-03/task06-unit-conversions/: CMakeLists.txt  solution.c  source.c
Mini HWs/pb071-mini-03/task09-loaders/: solution.c  (+1 more)
Mini HWs/pb071-mini-04/: CMakeLists.txt
Mini HWs/pb071-mini-05/: CMakeLists.txt
Mini HWs/pb071-mini-06/: CMakeLists.txt
Mini HWs/pb071-mini-06/task08-malloc-byte-array/: CMakeLists.txt  solution.c  source.c
Mini HWs/pb071-mini-07/: CMakeLists.txt
Mini HWs/pb071-mini-07/task05-salaries/: CMakeLists.txt  solution.c  source.c
Mini HWs/pb071-mini-08/: CMakeLists.txt
Mini HWs/pb071-mini-09/: CMakeLists.txt
Mini HWs/pb071-mini-10/: CMakeLists.txt
Mini HWs/pb071-mini-11/: CMakeLists.txt
Mini HWs/pb071-mini-11/task01-list-file/: CMakeLists.txt  solution.c  source.c
Mini HWs/pb071-mini-11/task09-benchmarking/: CMakeLists.txt  solution.c  source.c
(+194 files in other folders)
